--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <nav>
 <ul>
 <li>
-CODE MEAL KIT © 2022 <a href=http://mediacityseoul.kr/><img src=https://codemealkit.github.io/images/SMB_logo.png width=25% align=right style=border:0></a>
+AMADOLAB © 2021 <a href=https://amadolab.co.kr/><img src=https://codemealkit.github.io/images/SMB_logo.png width=25% align=right style=border:0></a>
 </li>
 </ul>
 </nav>
