--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=author content="Ronalds Vilcins - https://codemealkit.github.io/">
+<meta name=author content="Ronalds Vilcins - https://amadolab.github.io/">
 <title>CODE MEAL KIT</title>
 <meta name=description content>
 <meta name=twitter:card content="summary">
@@ -14,7 +14,7 @@
 <meta property="og:title" content="CODE MEAL KIT">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://codemealkit.github.io/">
+<meta property="og:url" content="https://amadolab.github.io/">
 <meta itemprop=name content="CODE MEAL KIT">
 <meta itemprop=description content>
 <link rel=canonical href=https://codemealkit.github.io/>
