--- a/welcome.html
+++ b/welcome.html
@@ -4,8 +4,8 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=author content="Ronalds Vilcins - https://codemealkit.github.io/">
-<title>Welcome | CODE MEAL KIT</title>
+<meta name=author content="Ronalds Vilcins - https://amadolab.github.io/">
+<title>Welcome | AMADOLAB KIT</title>
 <meta name=description content>
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Welcome">
@@ -18,7 +18,7 @@
 <meta itemprop=description content="코드 밀 키트 # <코드 밀 키트>는 제12회 서울미디어시티비엔날레 사전프로그램 «정거장» 커미션으로 제작된 프로젝트입니다. 2022년 7월 21일부터 10월 3일까지 매주 토요일 오전에 서울시립 남서울미술관에서 컴퓨터 프로그래밍 언어인 &lsquo;코드&rsquo;에 관한 질문을 모으고 대화하는 워크숍으로 진행됩니다. 전유진, 김승범, 정앎은 공동 기획자이자 호스트로서 돌아가며 워크숍을 이끌고, 때로는 게스트를 초대하여 대화를 진행합니다. 워크숍은 언어로서 코드, 프로그래밍 패러다임, IT 신화, 문화자본, 오픈 소스 등 매주 다른 소주제로 구성되며, 사전에 참여자를 모집하고 읽기 자료를 제공합니다. 일련의 과정에서 모아진 생각들은 키트로 제작되어 10월중에 발표할 예정입니다.">
 <meta itemprop=wordCount content="1454">
 <meta itemprop=keywords content="welcome,">
-<link rel=canonical href=https://codemealkit.github.io/welcome/>
+<link rel=canonical href=https://amadolab.github.io/welcome/>
 <link rel=dns-prefetch href=https://www.google-analytics.com>
 <link href=https://www.google-analytics.com rel=preconnect crossorigin>
 <link rel=alternate type=application/atom+xml title="CODE MEAL KIT" href=https://codemealkit.github.io/atom.xml>
