--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta property="og:url" content="https://amadolab.github.io/">
 <meta itemprop=name content="CODE MEAL KIT">
 <meta itemprop=description content>
-<link rel=canonical href=https://codemealkit.github.io/>
+<link rel=canonical href=https://amadolab.github.io/>
 <link rel=dns-prefetch href=https://www.google-analytics.com>
 <link href=https://www.google-analytics.com rel=preconnect crossorigin>
 <link rel=alternate type=application/atom+xml title="CODE MEAL KIT" href=https://codemealkit.github.io/atom.xml>
