--- a/codebrew.html
+++ b/codebrew.html
@@ -4,8 +4,8 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=author content="Ronalds Vilcins - https://codemealkit.github.io/">
-<title>Code Brew | CODE MEAL KIT</title>
+<meta name=author content="Ronalds Vilcins - https://amadolab.github.io/">
+<title>Code Brew | AMADOLAB KIT</title>
 <meta name=description content>
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Code Brew">
@@ -24,7 +24,7 @@
 목차 #  자연의 리듬 다각형과 원 코드 코멘트 Rule 30 CA (30번째 룰) 스테가노그래피 바빌로니아 법 재귀적 Hello, World 연산의 순서 바이너리의 틈">
 <meta itemprop=wordCount content="353">
 <meta itemprop=keywords content="codebrew,">
-<link rel=canonical href=https://codemealkit.github.io/codebrew/>
+<link rel=canonical href=https://amadolab.github.io/codebrew/>
 <link rel=dns-prefetch href=https://www.google-analytics.com>
 <link href=https://www.google-analytics.com rel=preconnect crossorigin>
 <link rel=alternate type=application/atom+xml title="CODE MEAL KIT" href=https://codemealkit.github.io/atom.xml>
