--- a/welcome.html
+++ b/welcome.html
@@ -13,7 +13,7 @@
 <meta property="og:title" content="Welcome">
 <meta property="og:description" content="코드 밀 키트 # <코드 밀 키트>는 제12회 서울미디어시티비엔날레 사전프로그램 «정거장» 커미션으로 제작된 프로젝트입니다. 2022년 7월 21일부터 10월 3일까지 매주 토요일 오전에 서울시립 남서울미술관에서 컴퓨터 프로그래밍 언어인 &lsquo;코드&rsquo;에 관한 질문을 모으고 대화하는 워크숍으로 진행됩니다. 전유진, 김승범, 정앎은 공동 기획자이자 호스트로서 돌아가며 워크숍을 이끌고, 때로는 게스트를 초대하여 대화를 진행합니다. 워크숍은 언어로서 코드, 프로그래밍 패러다임, IT 신화, 문화자본, 오픈 소스 등 매주 다른 소주제로 구성되며, 사전에 참여자를 모집하고 읽기 자료를 제공합니다. 일련의 과정에서 모아진 생각들은 키트로 제작되어 10월중에 발표할 예정입니다.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://codemealkit.github.io/welcome/"><meta property="article:section" content>
+<meta property="og:url" content="https://amadolab.github.io/welcome/"><meta property="article:section" content>
 <meta itemprop=name content="Welcome">
 <meta itemprop=description content="코드 밀 키트 # <코드 밀 키트>는 제12회 서울미디어시티비엔날레 사전프로그램 «정거장» 커미션으로 제작된 프로젝트입니다. 2022년 7월 21일부터 10월 3일까지 매주 토요일 오전에 서울시립 남서울미술관에서 컴퓨터 프로그래밍 언어인 &lsquo;코드&rsquo;에 관한 질문을 모으고 대화하는 워크숍으로 진행됩니다. 전유진, 김승범, 정앎은 공동 기획자이자 호스트로서 돌아가며 워크숍을 이끌고, 때로는 게스트를 초대하여 대화를 진행합니다. 워크숍은 언어로서 코드, 프로그래밍 패러다임, IT 신화, 문화자본, 오픈 소스 등 매주 다른 소주제로 구성되며, 사전에 참여자를 모집하고 읽기 자료를 제공합니다. 일련의 과정에서 모아진 생각들은 키트로 제작되어 10월중에 발표할 예정입니다.">
 <meta itemprop=wordCount content="1454">
