--- a/codebrew.html
+++ b/codebrew.html
@@ -17,14 +17,14 @@
 진행 : 김승범, 전유진, 정앎 티마스터 : 김화용
 목차 #  자연의 리듬 다각형과 원 코드 코멘트 Rule 30 CA (30번째 룰) 스테가노그래피 바빌로니아 법 재귀적 Hello, World 연산의 순서 바이너리의 틈">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://codemealkit.github.io/codebrew/"><meta property="article:section" content>
+<meta property="og:url" content="https://amadolab.github.io/codebrew/"><meta property="article:section" content>
 <meta itemprop=name content="Code Brew">
 <meta itemprop=description content="코드 브루 # 코드 브루(Code Brew)는 각 프로그램의 시작을 여는 서브 메뉴입니다. 일종의 식전 의식처럼 차를 우려내듯, 코드를 음미하는 시간을 10분 정도 갖고 본격적인 모임을 시작합니다. 워크숍 현장에서는 코드 브루의 개별 주제에 맞춰 티마스터가 제안하는 차가 제공됩니다. 주제별로 제작된 총 9개의 티는 추후 만들어질 키트에서 티백으로 담길 예정입니다.
 진행 : 김승범, 전유진, 정앎 티마스터 : 김화용
 목차 #  자연의 리듬 다각형과 원 코드 코멘트 Rule 30 CA (30번째 룰) 스테가노그래피 바빌로니아 법 재귀적 Hello, World 연산의 순서 바이너리의 틈">
 <meta itemprop=wordCount content="353">
 <meta itemprop=keywords content="codebrew,">
-<link rel=canonical href=https://codemealkit.github.io/codebrew/>
+<link rel=canonical href=https://amadolab.github.io/codebrew/>
 <link rel=dns-prefetch href=https://www.google-analytics.com>
 <link href=https://www.google-analytics.com rel=preconnect crossorigin>
 <link rel=alternate type=application/atom+xml title="CODE MEAL KIT" href=https://codemealkit.github.io/atom.xml>
